Change to event driven workflow